--- a/notes/11_ls.qmd
+++ b/notes/11_ls.qmd
@@ -4,7 +4,9 @@ html-math-method:
   method: mathjax
   url: "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
 number-sections: false
-format: pptx
+# format: pptx
+execute:
+    freeze: auto
 ---
 
 ## A Motivating Example
