--- a/notes/references.bib
+++ b/notes/references.bib
@@ -1,19 +1,31 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+@book{martins2021engineering,
+  title={Engineering design optimization},
+  author={Martins, Joaquim RRA and Ning, Andrew},
+  year={2021},
+  publisher={Cambridge University Press}
 }
 
+@article{wsjLeCun2024,
+  title = "{Meta's Yann LeCun on the Future of AI}",
+  author = "{Christopher Mims}",
+  year = {2024},
+  journal = "{The Wall Street Journal}",
+  url = "https://www.wsj.com/tech/ai/yann-lecun-ai-meta-aa59e2f5",
+  note = "[Accessed October 28, 2024]"
+}
 
+@online{merriamML2024,
+  title = "{Machine Learning}",
+  author = "{Merriam-Webster Dictionary}",
+  year = {2024},
+  url = "https://www.merriam-webster.com/dictionary/machine%20learning",
+  note = "[Accessed October 28, 2024]"
+}
+
+@online{cambridgeDS2024,
+  title = "{Data Science}",
+  author = "{Cambridge Dictionary}",
+  year = {2024},
+  url = "https://dictionary.cambridge.org/dictionary/english/data-science",
+  note = "[Accessed October 28, 2024]"
+}
