intro mostly drafted, need to add out of scope section and fill in course philosophy

--- a/notes/_macros.qmd
+++ b/notes/_macros.qmd
@@ -1,6 +1,8 @@
 ::: {.hidden}
 
 \newcommand*{\R}{\mathbb{R}}
+\newcommand*{\N}{\mathbb{N}}
+\newcommand*{\cF}{\mathcal{F}}
 <!-- \renewcommand{\P}{\mathrm{P}} -->
 
 <!-- $$
