--- a/notes/01_intro.qmd
+++ b/notes/01_intro.qmd
@@ -65,7 +65,8 @@ We use the notation $z\in \R^d$ to denote a real-valued vector of $d$ input vari
 Propose your own example scenario where it would be useful to predict real-valued outputs from inputs, drawing on your own experience, e.g. in personal projects, previous coursework, work/internship/co-op experiences, or extracurriculars. What would $z$ and $y$ represent? What does predicting $y$ from $z$ enable in your scenario?
 :::
 
-Mathematically, predicting $y$ from $z$ amounts to defining a *function* $f$ that takes in a $d$-dimensional input and outputs a scalar. Mathematical notational shorthand for this is $f:\R^d\to\R$. The question at hand is: how do we choose $f$? There are many ways to do so:
+Mathematically, predicting $y$ from $z$ amounts to defining a *function* $f$ that takes in a $d$-dimensional input and outputs a scalar. 
+Mathematical notational shorthand for this is $f:\R^d\to\R$. This function $f$ is often called a **model**. The question at hand is: how do we choose $f$? There are many ways to do so:
 
 1. At a baseline, you could just make up a model: let's just say $y = f(z) = \|z\|^2$. This is mathematically valid, but it's probably a bad model for the three example scenarios above, because this model probably issues predictions that are very different from the true outputs. 
 
@@ -77,19 +78,83 @@ Learning how to fit models to data and assess their accuracy and usefulness is t
 
 ### Mathematical setting and problem formulation
 
-formulation as selection from within a parametrized model class 
+Hot take: Machine learning methods, at their core, are simply very complicated calculators. 
 
-choosing parameters via optimization 
+Our goal is to understand the calculations that these methods are carrying out, which is going to enable us to understand and assess both the successes and failures of the methods. This means we want to be precise about the mathematical *problem formulation*, that is, the characterization of the math problem that is being solved by the methods.
 
-some implication of the breadth of methods
+Formulating a regression problem requires three ingredients:
 
-### Things that are not regression
+1. Paired input and output data: let $N$ be the number of pairs, and let $z_1,\ldots,z_N$ denote the $N$ input data and $y_1,\ldots,y_N$ denote the $N$ corresponding outputs. It is common to notate the set of all these data pairs as $\{(z_i,y_i)\}_{i=1}^N$.
+
+2. The definition of a parametrized *model class* -- more details on this in a moment, but you should think of this as a set of possible functions that map $z$ to $y$. 
+
+3. A method for choosing a model from within the chosen model class -- in regression problems this is most frequently done by solving an appropriate optimization problem to pick the "best" possible model from within the class. 
+
+Let's focus on the second ingredient, the parametrized model class. We use the mathematical term "class" in a similar way to the mathematical term "set". For example, perhaps you will have heard before that the numbers $1,2,3,\ldots$ all the way to infinity form the "set of natural numbers" (often denoted $\N$). As another example, $\{H,T\}$ can denote the set of possible outcomes of flipping a two-sided coin (H for heads, T for tails). Note that it is common to use curly braces $\{\cdot\}$ to enclose a set (notice where it appears in our shorthand notation for the data set!). Similarly, we can define a set of possible functions that map $z$ to $y$, for example (assuming $d=1$ so that $z$ is a scalar for the moment):
+
+$$
+\cF := \{z^2, \sin(z), \exp(z)\}
+$$
+
+In the above expression, the notation $:=$ indicates that $\cF$ is being *defined* as the expression that follows $:=$, that is, $\cF$ is the set of three possible functions: $f(z)=z^2$, $f(z)=\sin(z)$, and $f(z)=\exp(z)$. You see that it might be cumbersome to write the "$f(z)=$" part of every function, so that part often gets dropped. 
+
+But so far I have still only been saying "set" --- what distinguishes a "class" of potential models from a "set" of potential models? Usually we use the term "class" to denote a set of functions that share certain properties or functional forms, for example (still assuming $z$ is scalar for the moment) the class of all quadratic functions:
+
+$$
+\{c_0 + c_1 z + c_2 z^2 : c_0,c_1,c_2\in\R\}
+$$
+
+The way to read this notation above is as the set of all functions of the form $f(z) = c_0 + c_1 z + c_2 z^2$ that can be obtained when $c_0,c_1,c_2$ are allowed to take on any real values.[^3] We call this the *class* of all quadratic functions because by varying $c_0,c_1,c_2$ we always get a quadratic function (noting that with our mathematics hats on, linear functions are just special cases of quadratic functions where the second-order coefficient is zero). Thus, functions within the class share a functional form, unlike the set $\cF$ we defined above. However, we could use the functions in the set $\cF$ to construct an alternative *model class*:
+
+$$
+\{a z^2 + b\sin(z) + c\exp(z) : a,b,c\in\R\}
+$$
+
+or, allowing $z$ to be a $d$-dimensional vector again, we could consider the following model class:
+
+$$
+\{\max(0,a^\top (Wz + b)): W\in\R^{d\times d}, \,a,b\in\R^d\}
+$$
+
+::: {.callout-note}
+## Exercise
+How would you read and understand the two classes of functions notated above?
+:::
+
+[^3]: Following the same notational convention, we could write the data set as $\{(z_i,y_i) : i =1,\ldots,N\}$, which we would read as the set of all pairs $(z_i,y_i)$ for $i = 1,\ldots,N$, but the notation $\{(z_i,y_i)\}_{i=1}^N$ is more compact and more common. I don't make the rules. 🤷‍♀️ 
+
+Notice that the notation we have been using to define function classes follows a pattern: within the brackets, before the colon comes the form of the function, followed by a list of some variables that appear in the function definition, together with a specification of what values those variables are allowed to take on. We call the post-colon variables *parameters*, and the set of all values that the parameters are allowed to be chosen from is called the *parameter space*. Any of the classes of functions we have defined above can be described as a *parametrized model class*, because they define sets of functions with a shared form, where the individual functions within the set arise from varying the values of the parameters.
+
+Let me describe some common notational conventions that I want you to be familiar with.[^4][^5]
+It is common to use a single lowercase letter (usually a Greek one) to denote the set of all parameters -- e.g., $\beta = \{c_0,c_1,c_2\}$ or $\theta = \{a,b,W\}$, and the corresponding capital letter to denote the corresponding parameter space, i.e., $B = \R^3$ and $\Theta = \R \times \R \times \R^{d\times d}$. Where we might write $y = f(z)$ for a general abstract model $f$, we will typically write $y = f(z;\beta)$ or $y = f(z;\theta)$ to indicate a model parametrized by $\beta$ or $\theta$ (note that we separate inputs from parameters using a semicolon).
+
+<!-- Recall that we previously used $f:z\mapsto y$ to denote a function that maps an input variable $z$ to an output variable $y$. For parametrized functions, you might see $f_\theta:z\mapsto y$ to denote a function parametrized by $\theta$ that maps $z$ to $y$, or you might see $f: z\times\theta\mapsto y$ -->
+
+[^4]: These are common conventions, but the ML community is comprised of a diverse group of scientists and engineers across disciplines, and it's very common to read things that use entirely different notation. This is unfortunately the reality of things, and one of the reasons I am going to push you in this class to be comfortable describing the underlying concepts precisely using different notations - that is, you are going to develop flexibility in re-assigning meaning to different symbols as we go along (I hope).
+
+[^5]: I'm making an effort to explicitly define notation when I introduce it, and to give examples of how to read and understand it, but it's easy for me to miss things, so please speak up or write us a message if you have a question. 
+
+If you've heard the term "model architecture" used to describe a machine learning model, what this means is the specification of the parametrized model class. As the term "architecture" suggests, choosing the model class is a design choice, and different model classes have varying advantages and disadvantages in terms of best possible performance, difficulty to train (more on that shortly), computational cost, and more. We'll cover many possible choices of model class, and explore their pros and cons, throughout the course.
+
+Now we will turn our attention to the third ingredient, the method of selecting a model from within the chosen class. Because parametrized models are defined by their parameters, the choice of model amounts to choosing the parameter values. Again, you could just make up the parameter values (choose your favorite numbers), but this is unlikely to match the data well and unlikely to yield accurate predictions. In some cases you could also derive the parameter values based on physical principles (this is possible when models in the chosen class have some physical interpretation). But our focus will be on choosing parameters that define a model that "best matches" the available data. A basic and standard version of this parameter selection task is to solve the following minimization problem:
+
+$$
+\theta^* = \arg\min_{\theta\in\Theta}\frac 1N \sum_{i=1}^N (f(z_i;\theta)-y_i)^2
+$$
+
+Note that for the above expression to be well-defined, we need our first two ingredients -- that is, we need our data set, and we need to have already chosen the parametrized model class, which gives us an expression for the parametrized function $f(z;\theta)$. Once we have those ingredients, this expression defines $\theta^*$ as the parameter that minimizes the average square error of the learned model over the available data. In this sense, this parameter $\theta^*$ defines a learned model $f(z;\theta^*)$ that "best fits" the data (it is better than all other models in its class). 
+
+As we progress through this course, we will learn more about how we can solve the above optimization (it is different for different model architectures), and about alternative ways to select the parameter based on alternative minimization problems. 
+
+## Things that are not regression
 
 I want to emphasize that this class is not and indeed cannot (realistically) be an exhaustive introduction to machine learning, artificial intelligence, or data science. Even the community of professionals who describe themselves as working in "scientific machine learning" is quite broad in scope and would include folks working on topics that I do not intend to cover in this class. There are many topics within AI/ML/data science we will not cover (beyond perhaps at most a very surface level), including generative modeling, decision trees, unsupervised learning methods like clustering, and many more. 
 
 Give one example, list other examples, I cannot possibly hope to cover all these things in this course, so another goal of the course is to teach the language of ML so you are prepared to learn other things in future courses and on your own. 
 
-## The three pillars of AI: mathematics, computation, and human intelligence 
+## Course principles, structure, and intended learning outcomes
+
+The three pillars of AI: mathematics, computation, and human intelligence 
 
 mathematics is the language that describes what we want to do
 
@@ -97,199 +162,13 @@ computation/programming is the execution (translation)
 
 human intelligence is woven throughout, specifies problem, evaluates results, re-specifies problem. 
 
-### Course structure and intended learning outcomes
-fill in nearer to term
+at a high level we want to teach you how to work with all three of these, and that motivates the structure of the course assignments and learning outcomes
 
-<!-- ## A Motivating Example -->
+learning outcomes
 
-<!-- ![Image Source: Embry-Riddle Aeronautical University](images/AirfoilDrag.png){fig-align="center" width=80%} -->
-<!-- 
-Suppose we wish to efficiently approximate the force of drag ($F_d$), measured in $N$, on a specific airplane wing if we only have access to the following information about the wing and its operating conditions: 
+problem solving review - meant to develop your skills in demonstrating human intelligence
 
-* The angle of attack ($\alpha$), measured in degrees
-* The density of the fluid ($\rho$), measured in $kg/m^3$ 
-* The velocity of the fluid ($v$), measured in $m/s$  -->
 
-<!-- ## Linear Approximation of an Unknown Function
 
-Let's bundle our inputs into a single vector, defined by: 
-
-$$ \mathbf{x} = \begin{bmatrix} \alpha \\ \rho \\ v\end{bmatrix} $$ 
-
-
-We assume there is some unknown function, $f(\cdot):\mathbb{R}^3 \rightarrow \mathbb{R}$, that gives us an optimal estimate for drag-force based on these "features": 
-
-$$ F_d = f (\mathbf{x}) + \varepsilon $$ 
-
-where $\varepsilon$ is some external noise, disturbances or information entirely independent of the input variables.  -->
-
-<!-- Now consider a function $h(\mathbf{x}; \beta):\mathbb{R}^3 \rightarrow \mathbb{R}$ which is a simple linear combination of the inputs: 
-
-$$ h(\mathbf{x}; \beta) = \begin{bmatrix} 1 & \mathbf{x}^\top \end{bmatrix} \begin{bmatrix}  \beta_0 \\ \beta_1 \\ \beta_2 \\ \beta_3  \end{bmatrix} = \beta_0 + \beta_1 \alpha + \beta_2 \rho + \beta_3 v $$
-
-**The Million Dollar Question:**
-
-Given we know the structure of $h(\mathbf{x}; \beta)$, how can we efficiently optimize the parameters of $h(\mathbf{x}; \beta)$ to best approximate $f(\mathbf{x})$? 
-
-## Representing Observed Input-Output Data
-
-Suppose we have taken $N$ real-life samples of the input variables and their corresponding drag-force, $F_d$. Let each sample of the system under various operating conditions form row of a matrix $\mathbf{X} \in \mathbb{R}^{N \times 4}$ for the inputs and a matrix $\mathbf{Y} \in \mathbb{R}^N$ for their corresponding outputs: 
-
-$$ \mathbf{X} = \begin{bmatrix} 1 & \alpha_1 & \rho_1 & v_1 \\ 1 & \alpha_2 & \rho_2 & v_2 \\ & & \vdots & \\ 1 & \alpha_N & \rho_N & v_N \end{bmatrix} , \mathbf{Y} = \begin{bmatrix} F_{d1} \\ F_{d2} \\ \vdots \\ F_{d3} \end{bmatrix} $$ 
-
- 
-We can efficiently compute the predictions of $h(\mathbf{X}; \beta)$ with a simple matrix-vector multiplication: 
-
-$$ \hat{\mathbf{Y}} = \mathbf{X} \beta = \begin{bmatrix} 1 & \alpha_1 & \rho_1 & v_1 \\ 1 & \alpha_2 & \rho_2 & v_2 \\ & & \vdots & \\ 1 & \alpha_N & \rho_N & v_N \end{bmatrix} \begin{bmatrix} \beta_0 \\ \beta_1 \\ \beta_2 \\ \beta_3 \end{bmatrix} = \begin{bmatrix}  \beta_0 + \beta_1 \alpha_1 + \beta_2 \rho_1 + \beta_3 v_1 \\ \beta_0 + \beta_1 \alpha_2 + \beta_2 \rho_2 + \beta_3 v_2  \\ \vdots \\ \beta_0 + \beta_1 \alpha_N + \beta_2 \rho_N + \beta_3 v_N \end{bmatrix}  \in \mathbb{R}^N $$ 
-
-## The Least-Squares Optimization Problem
-
-Our goal is to adjust the parameters $\beta$ so that our predictions, $\hat{\mathbf{Y}}$, are as close to the true outputs, $\mathbf{Y}$ as possible. One way to measure prediction error is with Mean Squared Error: 
-
-$$ \text{MSE} = \frac{1}{N} \sum_{i=1}^N (\hat{y}_i - y_i)^2 = \frac{1}{N} || \hat{\mathbf{Y}} - \mathbf{Y}||_2^2 = \frac{1}{N} || \mathbf{X} \beta - \mathbf{Y} ||_2^2 $$ 
-
-the $\frac{1}{N}$ is only a scalar, we wish to choose the value of $\beta$ that minimizes the following loss-function: 
-
-$$ L(\beta) = ||\mathbf{X} \beta - \mathbf{Y}||_2^2 $$
-
-## Solving the Least-Squares Problem
-
-Because the squared 2-Norm can be rewritten as an inner product, we can rewrite this loss-function as: 
-
-$$ L(\beta) = ||\mathbf{X} \beta - \mathbf{Y}||_2^2= (\mathbf{X} \beta - \mathbf{Y})^\top (\mathbf{X} \beta - \mathbf{Y}) $$
-$$ = (\beta^\top \mathbf{X}^\top - \mathbf{Y}^\top) (\mathbf{X} \beta - \mathbf{Y}) $$
-
-$$ = \beta^\top \mathbf{X^\top X} \beta - 2 \beta^\top \mathbf{X^\top \mathbf{Y}} + \mathbf{Y^\top Y}$$
-
-As we learned in multivariable calculus, to find a the extrema of a continuous function, we need to identify the critical points of the function. This means setting the gradient of the loss-function equal to the zero-vector:
-
-$$ \nabla L_\beta = 2 \mathbf{X^\top X} \beta - 2 \mathbf{X^\top Y} = \mathbf{0}$$ 
-
-Solving this equation for $\beta$ yields only one critical point: 
-
-$$ \hat{\beta} = (\mathbf{X^\top X})^{-1} \mathbf{X^\top Y} $$ 
-
-To check whether this point is a local minimum, maximum, or neither, we examine the nature of the Hessian: 
-
-$$ \nabla^2 L_\beta = 2 \mathbf{X^\top X} $$ 
-
-Because the Hessian is symmetric positive semidefinite and does not depend on $\beta$, this means that $L(\beta)$ is convex everywhere. Hence, $\hat{\beta}$ must be a global local minimum. 
-
-## Experimental Example
-
-Now suppose we have 100 experimental observations of various angles of attack, air-densities and velocities with the corresponding drag-force in a pandas DataFrame called `df`: 
-
-```{python}
-#| echo: false
-import numpy as np 
-import matplotlib.pyplot as plt 
-import pandas as pd
-import math
-
-np.random.seed(42)
-
-def Cd(alpha):
-    return 0.1 * np.exp(math.pi / 180.0 * alpha)
-
-def Fd(alpha, rho, v):
-    C_d = Cd(alpha)
-    A = 1.2 # m^2 
-    return 0.5*rho*alpha*v**2*C_d +1
-
-N = 100
-alpha = np.random.rand(N)*45
-rho = np.random.randn(N)*0.3 + 1.293 
-v = np.random.rand(N)*100
-F_d = Fd(alpha, rho, v) + 0*np.random.randn(N)
-
-df_dict = {
-    "alpha":alpha,
-    "rho":rho,
-    "velocity":v, 
-    "f_drag":F_d
-}
-
-df = pd.DataFrame(df_dict)
-```
-
-```{python}
-df.head()
-```
-
-We can create $\mathbf{X}$ and $\mathbf{Y}$ matrices by extracting the input features and outputs from the dataframe: 
-
-```{python}
-X = np.hstack((np.ones((N, 1)), df[['alpha', 'rho', 'velocity']].values))
-Y = df['f_drag'].values
-```
-
-We can solve for $\hat{\beta}$ by computing the normal equations: 
-
-```{python}
-beta_hat = np.linalg.inv(X.T @ X) @ (X.T @ Y)
-```
-
-And then compute the model's predictions at the training inputs: 
-
-```{python}
-Y_hat = X @ beta_hat
-```
-
-Now let's plot the $\hat{\mathbf{Y}}$ and $\mathbf{Y}$ to examine how closely correlated the two are. A straight line with slope-1 would mean the model exactly fitted all of the outputs: 
-
-```{python}
-plt.figure(figsize=(8,4))
-plt.scatter(Y, Y_hat)
-plt.grid()
-plt.xlabel("True Drag Force")
-plt.ylabel("Model Predicted Drag Force")
-```
-
-There is clearly a strong, but nonlinear correlation between the true and model-predicted drag-force. This indicates that there is a nonlinear relationship between the features and the output values. Let us quantify the MSE: 
-
-```{python}
-linear_mse = np.linalg.norm(Y_hat - Y, 2) / N
-print("Linear Features Mean-Squared Error: %.2f" % (linear_mse))
-```
-
-## Using Nonlinear Features to Improve Model Performance
-
-We know the underlying formula for drag-force is: 
-
-$$ F_d = \frac{1}{2} \rho v^2 C_d A  $$ 
-
-While this function doesn't depend on the angle of attack, we do see how the features are polynomially related to one another. Naturally, it is going to be difficult for a linear combination of features to replicate this. However, if we take the log of both sides, something interesting happens: 
-
-$$ \ln(F_d) = \ln(\frac{1}{2} \rho v^2 C_d A) = \ln(\frac{1}{2}) + \ln(\rho) + 2\ln(v) + \ln(C_d) + \ln(A) $$
-
-When our features and outputs are log-scaled, we see a friendly linear-combination of log-scaled versions features emerge! Let's alter our inputs and outputs accordingly, so our problem becomes: 
-
-$$ \mathbf{X} = \begin{bmatrix} 1 & \ln \alpha_1 & \ln \rho_1 & \ln v_1 \\ 1 & \ln \alpha_2 & \ln \rho_2 & \ln v_2 \\ & & \vdots & \\ 1 & \ln \alpha_N & \ln \rho_N & \ln v_N \end{bmatrix} , \mathbf{Y} = \begin{bmatrix} \ln F_{d1} \\ \ln F_{d2} \\ \vdots \\ \ln F_{d3} \end{bmatrix} $$ 
-
-Let's see how this works programmatically: 
-
-```{python}
-X_log = np.hstack((np.ones((N, 1)), np.log(df[['alpha', 'rho', 'velocity']].values)))
-Y_log = np.log(df['f_drag'].values - df['f_drag'].min() + 1)
-
-beta_log = np.linalg.inv(X_log.T @ X_log) @ (X_log.T @ Y_log)
-
-Y_hat_log = np.exp(X_log @ beta_log)+ df['f_drag'].min() - 1
-
-plt.figure(figsize=(8,4))
-plt.scatter(Y, Y_hat_log)
-plt.grid()
-plt.xlabel("True Drag Force")
-plt.ylabel("Model Predicted Drag Force")
-```
-
-Now let's see if our MSE has changed: 
-
-```{python}
-log_mse = np.linalg.norm(Y_hat_log - Y, 2)/N
-print("Logarithmically Scaled Features Mean-Squared Error: %.2f" % (log_mse))
-```
-
-We have nearly a 5x reduction in MSE just by log-scaling our features! If we choose the right features, linear regression can be an extremely powerful method for approximating complex functions.  -->
 
 ---
